LU-19151 build: fortify memcpy dentry len

Avoid theoretical overflow from dentry.len

lustre/llite/file.c:738:17: note: in expansion of macro 'memcpy'
  738 |                 memcpy(name, de->d_name.name, len);
      |                 ^~~~~~

Test-Parameters: trivial
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I6b22eddfc25615dcdf17cea8a38d80cdf650bf6c
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60007
Reviewed-by: Timothy Day <timday@amazon.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Petros Koutoupis <petros.koutoupis@hpe.com>